--- a/index.html
+++ b/index.html
@@ -17,13 +17,37 @@
     <script src="https://kit.fontawesome.com/3180a89ad8.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- Web Header Here -->
+    <header>
+        <div class="left">
+            <img src="images/qatar-1.png" alt="">
+        </div>
+        <div class="uses">
+            <i class="fa-solid fa-bars"></i>
+            <a class="active" href="#home">Home</a>
+              <a href="#contact">Contact</a>
+              <a href="#about">About</a>
+            <a class="active" href="#home">Home</a>
+              <a href="#contact">Contact</a>
+              <a href="#about">About</a>
+        </div>
+        <div class="user">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <button>
+                <a class="active" href="#sign-in">sign in</a>
+            </button>
+            <a href="#sign-up">sign up</a>
+        </div>
+        <div class="right">
+            <img src="images/qatar-1.png" alt="">
+        </div>
+    </header>
     <!-- main section started -->
     <main>
-        <section>
             <section class="banner">
                 <div class="banner-text">
                     <h1>FIFA World Cup Qatar 2022™</h1>
-                    <p>The official home for the world’s most prestigious event & also the greatest show on earth</p>
+                    <p>The official home for the world’s most prestigious event & also the greatest show on earth.Watch every match of the Fifa world cup Qatar- wherever you are with just a click</p>
                 <div class="watch">
                 <a id="live" target="_blank" href="">Watch Live</a> 
                     <i class="fa-solid fa-angle-right"></i>
@@ -33,12 +57,6 @@
                     <img src="images/goat...png" alt="">
                 </div>
             </section>
-            <div class="qatar">
-                <img src="images/qatar..png" alt="">
-            </div>
-        </section> 
-    </main>
-    
-     
+    </main>  
 </body>
 </html>
