--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         </div>
         <div class="uses">
             <i class="fa-solid fa-bars"></i>
-            <a class="active" href="#home">Home</a>
-              <a href="#contact">Contact</a>
-              <a href="#about">About</a>
-            <a class="active" href="#home">Home</a>
-              <a href="#contact">Contact</a>
-              <a href="#about">About</a>
+            <a class="active" href="#home">FIFA</a>
+              <a href="#contact">Home</a>
+              <a href="#about">Tournaments</a>
+            <a class="active" href="#home">Live</a>
+              <a href="#contact"></a>
+              <a href="#about">News</a>
         </div>
         <div class="user">
             <i class="fa-solid fa-magnifying-glass"></i>
@@ -48,15 +48,155 @@
                 <div class="banner-text">
                     <h1>FIFA World Cup Qatar 2022™</h1>
                     <p>The official home for the world’s most prestigious event & also the greatest show on earth.Watch every match of the Fifa world cup Qatar- wherever you are with just a click</p>
-                <div class="watch">
-                <a id="live" target="_blank" href="">Watch Live</a> 
-                    <i class="fa-solid fa-angle-right"></i>
-                </div>            
+                <button>
+                    <a id="live" target="_blank" href="">Watch Live</a> 
+                    <i class="fa-solid fa-angle-right"></i>   
+                </button>         
                 </div>
                 <div class="goat">
                     <img src="images/goat...png" alt="">
                 </div>
             </section>
-    </main>  
+    
+      <!-----------------------------
+          menu & contents section
+        ------------------------------>
+    <section class="contents-space">
+        <div class="contents">
+            <div class="menu-option">
+                <div><a href="match.html">Upcoming Match</a></div>
+                <div><a href="group.html">All Group</a></div>
+                <div> <a href="index.html">Blog</a></div>
+            </div>
+         
+            <div class="blogs">
+                <article class="article">
+                    <img src="images/football_Bangladesh.jpg" alt="">
+                    <div class="click-para">
+                        <button>click now</button>
+                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
+                    </div>
+                    <div class="time-chat">
+                        <span><i class="fa-solid fa-clock"></i> 10h</span>
+                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
+                    </div>
+                </article>
+                <article class="article">
+                    <img src="images/messi.10.jpg" alt="">
+                    <div class="click-para">
+                        <button>click now</button>
+                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
+                    </div>
+                    <div class="time-chat">
+                        <span><i class="fa-solid fa-clock"></i> 10h</span>
+                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
+                    </div>
+                </article>
+                <article class="article">
+                    <img src="images/messi-bycle_kick.jpg" alt="">
+                    <div class="click-para">
+                        <button>click now</button>
+                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
+                    </div>
+                    <div class="time-chat">
+                        <span><i class="fa-solid fa-clock"></i> 10h</span>
+                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
+                    </div>
+                </article>
+                <article class="article">
+                    <img src="images/cr-7_.webp" alt="">
+                    <div class="click-para">
+                        <button>click now</button>
+                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
+                    </div>
+                    <div class="time-chat">
+                        <span><i class="fa-solid fa-clock"></i> 10h</span>
+                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
+                    </div>
+                </article>
+                <article class="article">
+                    <img src="images/Ronaldo.7-Messi.10.jpg" alt="">
+                    <div class="click-para">
+                        <button>click now</button>
+                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
+                    </div>
+                    <div class="time-chat">
+                        <span><i class="fa-solid fa-clock"></i> 10h</span>
+                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
+                    </div>
+                </article>
+                <article class="article">
+                    <img src="images/Pedri2.jpeg" alt="">
+                    <div class="click-para">
+                        <button>click now</button>
+                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
+                    </div>
+                    <div class="time-chat">
+                        <span><i class="fa-solid fa-clock"></i> 10h</span>
+                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
+                    </div>
+                </article>
+                <article class="article">
+                    <img src="images/neymar-.webp"">
+                    <div class="click-para">
+                        <button>click now</button>
+                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
+                    </div>
+                    <div class="time-chat">
+                        <span><i class="fa-solid fa-clock"></i> 10h</span>
+                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
+                    </div>
+                </article>
+                <article class="article">
+                    <img src="images/cr-7.webp" alt="">
+                    <div class="click-para">
+                        <button>click now</button>
+                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
+                    </div>
+                    <div class="time-chat">
+                        <span><i class="fa-solid fa-clock"></i> 10h</span>
+                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
+                    </div>
+                </article>
+                <article class="article">
+                    <img src="images/hazard_mbappe.jpg" alt="">
+                    <div class="click-para">
+                        <button>click now</button>
+                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
+                    </div>
+                    <div class="time-chat">
+                        <span><i class="fa-solid fa-clock"></i> 10h</span>
+                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
+                    </div>
+                </article>  
+            </div>  
+        </div>             
+    </section>
+</main> 
+
+    <!-------------------
+         Main section end Here  
+         --------------------->
+
+         <!-- footer started here -->
+         <footer>
+            <div class="footer-head">
+                <h2>Goal</h2>
+                <hr>
+                <div class="footer-nav">
+                    <a href="">Contact Us</a>
+                    <a href="">Terms of Service</a>
+                    <a href="">Privacy Policy</a>
+                    <a href="">Privacy Settings </a>
+                    <a href="">Goal App</a>
+                    <a href="">Goal Live</a>
+                </div>
+                <div class="follow-us">
+                    <a class="fb" href="https://www.facebook.com/programmingHero" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                    <a class="lin" href="https://www.linkedin.com/company/programminghero/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a class="git" href="https://github.com/ProgrammingHero1" target="_blank"><i class="fa-brands fa-github"></i></a>
+                </div>
+            </div>
+        </footer>
 </body>
 </html>
