--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
          
             <div class="blogs">
-                <article class="article">
+                <div class="design">
                     <img src="images/football_Bangladesh.jpg" alt="">
                     <div class="click-para">
                         <button>click now</button>
@@ -80,8 +80,8 @@
                         <span><i class="fa-solid fa-clock"></i> 10h</span>
                         <span><i class="fa-solid fa-comment-dots"></i>23</span>
                     </div>
-                </article>
-                <article class="article">
+                </div>
+                <div class="design">
                     <img src="images/messi.10.jpg" alt="">
                     <div class="click-para">
                         <button>click now</button>
@@ -91,8 +91,8 @@
                         <span><i class="fa-solid fa-clock"></i> 10h</span>
                         <span><i class="fa-solid fa-comment-dots"></i>23</span>
                     </div>
-                </article>
-                <article class="article">
+                </div>
+                <div class="design">
                     <img src="images/messi-bycle_kick.jpg" alt="">
                     <div class="click-para">
                         <button>click now</button>
@@ -102,8 +102,8 @@
                         <span><i class="fa-solid fa-clock"></i> 10h</span>
                         <span><i class="fa-solid fa-comment-dots"></i>23</span>
                     </div>
-                </article>
-                <article class="article">
+                </div>
+                <div class="design">
                     <img src="images/cr-7_.webp" alt="">
                     <div class="click-para">
                         <button>click now</button>
@@ -113,8 +113,8 @@
                         <span><i class="fa-solid fa-clock"></i> 10h</span>
                         <span><i class="fa-solid fa-comment-dots"></i>23</span>
                     </div>
-                </article>
-                <article class="article">
+                </div>
+                <div class="design">
                     <img src="images/Ronaldo.7-Messi.10.jpg" alt="">
                     <div class="click-para">
                         <button>click now</button>
@@ -124,8 +124,8 @@
                         <span><i class="fa-solid fa-clock"></i> 10h</span>
                         <span><i class="fa-solid fa-comment-dots"></i>23</span>
                     </div>
-                </article>
-                <article class="article">
+                </div>
+                <div class="design">
                     <img src="images/Pedri2.jpeg" alt="">
                     <div class="click-para">
                         <button>click now</button>
@@ -135,8 +135,8 @@
                         <span><i class="fa-solid fa-clock"></i> 10h</span>
                         <span><i class="fa-solid fa-comment-dots"></i>23</span>
                     </div>
-                </article>
-                <article class="article">
+                </div>
+                <div class="design">
                     <img src="images/neymar-.webp"">
                     <div class="click-para">
                         <button>click now</button>
@@ -146,8 +146,8 @@
                         <span><i class="fa-solid fa-clock"></i> 10h</span>
                         <span><i class="fa-solid fa-comment-dots"></i>23</span>
                     </div>
-                </article>
-                <article class="article">
+                </div>
+                <div class="design">
                     <img src="images/cr-7.webp" alt="">
                     <div class="click-para">
                         <button>click now</button>
@@ -157,8 +157,8 @@
                         <span><i class="fa-solid fa-clock"></i> 10h</span>
                         <span><i class="fa-solid fa-comment-dots"></i>23</span>
                     </div>
-                </article>
-                <article class="article">
+                </div>
+                <div class="design">
                     <img src="images/hazard_mbappe.jpg" alt="">
                     <div class="click-para">
                         <button>click now</button>
@@ -168,7 +168,7 @@
                         <span><i class="fa-solid fa-clock"></i> 10h</span>
                         <span><i class="fa-solid fa-comment-dots"></i>23</span>
                     </div>
-                </article>  
+                </div>  
             </div>  
         </div>             
     </section>
