--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="design">
                     <img src="images/football_Bangladesh.jpg" alt="">
                     <div class="click-para">
-                        <button>click now</button>
+                        <button><a href="">click now</a></button>
                         <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
                     </div>
                     <div class="time-chat">
@@ -84,7 +84,7 @@
                 <div class="design">
                     <img src="images/messi.10.jpg" alt="">
                     <div class="click-para">
-                        <button>click now</button>
+                        <button><a href="">click now</a></button>
                         <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
                     </div>
                     <div class="time-chat">
@@ -95,7 +95,7 @@
                 <div class="design">
                     <img src="images/messi-bycle_kick.jpg" alt="">
                     <div class="click-para">
-                        <button>click now</button>
+                        <button><a href="">click now</a></button>
                         <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
                     </div>
                     <div class="time-chat">
@@ -106,7 +106,7 @@
                 <div class="design">
                     <img src="images/cr-7_.webp" alt="">
                     <div class="click-para">
-                        <button>click now</button>
+                        <button><a href="">click now</a></button>
                         <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
                     </div>
                     <div class="time-chat">
@@ -117,7 +117,7 @@
                 <div class="design">
                     <img src="images/Ronaldo.7-Messi.10.jpg" alt="">
                     <div class="click-para">
-                        <button>click now</button>
+                        <button><a href="">click now</a></button>
                         <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
                     </div>
                     <div class="time-chat">
@@ -128,7 +128,7 @@
                 <div class="design">
                     <img src="images/Pedri2.jpeg" alt="">
                     <div class="click-para">
-                        <button>click now</button>
+                        <button><a href="">click now</a></button>
                         <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
                     </div>
                     <div class="time-chat">
@@ -139,7 +139,7 @@
                 <div class="design">
                     <img src="images/neymar-.webp"">
                     <div class="click-para">
-                        <button>click now</button>
+                        <button><a href="">click now</a></button>
                         <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
                     </div>
                     <div class="time-chat">
@@ -150,7 +150,7 @@
                 <div class="design">
                     <img src="images/cr-7.webp" alt="">
                     <div class="click-para">
-                        <button>click now</button>
+                        <button><a href="">click now</a></button>
                         <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
                     </div>
                     <div class="time-chat">
@@ -161,7 +161,7 @@
                 <div class="design">
                     <img src="images/hazard_mbappe.jpg" alt="">
                     <div class="click-para">
-                        <button>click now</button>
+                        <button><a href="">click now</a></button>
                         <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
                     </div>
                     <div class="time-chat">
