--- a/index.html
+++ b/index.html
@@ -1,202 +1,263 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FIFA World Cup Qatar 2022™</title>
 
     <!-- Favicon Link -->
-    <link rel="shortcut icon" href="https://cdn.mos.cms.futurecdn.net/mURduKgY5DXyaf4SLdAKp9.jpeg" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="https://cdn.mos.cms.futurecdn.net/mURduKgY5DXyaf4SLdAKp9.jpeg"
+      type="image/x-icon"
+    />
 
     <!-- Common CSS Link -->
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="common.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- Font Aswesome Link -->
-    <script src="https://kit.fontawesome.com/3180a89ad8.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <script
+      src="https://kit.fontawesome.com/3180a89ad8.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <!-- Web Header Here -->
     <header>
-        <div class="left">
-            <img src="images/qatar-1.png" alt="">
-        </div>
-        <div class="uses">
-            <i class="fa-solid fa-bars"></i>
-            <a class="active" href="#home">FIFA</a>
-              <a href="#contact">Home</a>
-              <a href="#about">Tournaments</a>
-            <a class="active" href="#home">Live</a>
-              <a href="#contact"></a>
-              <a href="#about">News</a>
-        </div>
-        <div class="user">
-            <i class="fa-solid fa-magnifying-glass"></i>
-            <button>
-                <a class="active" href="#sign-in">sign in</a>
-            </button>
-            <a href="#sign-up">sign up</a>
-        </div>
-        <div class="right">
-            <img src="images/qatar-1.png" alt="">
-        </div>
+      <div class="left">
+        <img src="images/qatar-1.png" alt="" />
+      </div>
+      <div class="uses">
+        <i class="fa-solid fa-bars"></i>
+        <a class="active" href="#home">FIFA</a>
+        <a href="#contact">Home</a>
+        <a href="#about">Tournaments</a>
+        <a class="active" href="#home">Live</a>
+        <a href="#contact"></a>
+        <a href="#about">News</a>
+      </div>
+      <div class="user">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <button>
+          <a class="active" href="#sign-in">sign in</a>
+        </button>
+        <a href="#sign-up">sign up</a>
+      </div>
+      <div class="right">
+        <img src="images/qatar-1.png" alt="" />
+      </div>
     </header>
     <!-- main section started -->
     <main>
-            <section class="banner">
-                <div class="banner-text">
-                    <h1>FIFA World Cup Qatar 2022™</h1>
-                    <p>The official home for the world’s most prestigious event & also the greatest show on earth.Watch every match of the Fifa world cup Qatar- wherever you are with just a click</p>
-                <button>
-                    <a id="live" target="_blank" href="">Watch Live</a> 
-                    <i class="fa-solid fa-angle-right"></i>   
-                </button>         
-                </div>
-                <div class="goat">
-                    <img src="images/goat...png" alt="">
-                </div>
-            </section>
-    
+      <section class="banner">
+        <div class="banner-text">
+          <h1>FIFA World Cup Qatar 2022™</h1>
+          <p>
+            The official home for the world’s most prestigious event & also the
+            greatest show on earth.Watch every match of the Fifa world cup
+            Qatar- wherever you are with just a click
+          </p>
+          <button>
+            <a id="live" target="_blank" href="">Watch Live</a>
+            <i class="fa-solid fa-angle-right"></i>
+          </button>
+        </div>
+        <div class="goat">
+          <img src="images/goat...png" alt="" />
+        </div>
+      </section>
+
       <!-----------------------------
           menu & contents section
         ------------------------------>
-    <section class="contents-space">
+      <section class="contents-space">
         <div class="contents">
-            <div class="menu-option">
-                <div><a href="match.html">Upcoming Match</a></div>
-                <div><a href="group.html">All Group</a></div>
-                <div> <a href="index.html">Blog</a></div>
+          <div class="menu-option">
+            <div class="option-1"><a href="match.html">Upcoming Match</a></div>
+            <div class="option-2"><a href="group.html">All Group</a></div>
+            <div class="option-3"><a href="index.html">Blog</a></div>
+          </div>
+
+          <div class="blogs">
+            <div class="design">
+              <img src="images/football_Bangladesh.jpg" alt="" />
+              <div class="click-para">
+                <button><a href="https://t.ly/hmeb">click now</a></button>
+                <p>
+                  Qatar and Bangladesh will play the first fixture of the Asian
+                  Qualifiers for the FIFA World Cup Qatar
+                </p>
+              </div>
+              <div class="time-chat">
+                <span><i class="fa-solid fa-clock"></i> 10h</span>
+                <span><i class="fa-solid fa-comment-dots"></i>23</span>
+              </div>
             </div>
-         
-            <div class="blogs">
-                <div class="design">
-                    <img src="images/football_Bangladesh.jpg" alt="">
-                    <div class="click-para">
-                        <button><a href="">click now</a></button>
-                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
-                    </div>
-                    <div class="time-chat">
-                        <span><i class="fa-solid fa-clock"></i> 10h</span>
-                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
-                    </div>
-                </div>
-                <div class="design">
-                    <img src="images/messi.10.jpg" alt="">
-                    <div class="click-para">
-                        <button><a href="">click now</a></button>
-                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
-                    </div>
-                    <div class="time-chat">
-                        <span><i class="fa-solid fa-clock"></i> 10h</span>
-                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
-                    </div>
-                </div>
-                <div class="design">
-                    <img src="images/messi-bycle_kick.jpg" alt="">
-                    <div class="click-para">
-                        <button><a href="">click now</a></button>
-                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
-                    </div>
-                    <div class="time-chat">
-                        <span><i class="fa-solid fa-clock"></i> 10h</span>
-                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
-                    </div>
-                </div>
-                <div class="design">
-                    <img src="images/cr-7_.webp" alt="">
-                    <div class="click-para">
-                        <button><a href="">click now</a></button>
-                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
-                    </div>
-                    <div class="time-chat">
-                        <span><i class="fa-solid fa-clock"></i> 10h</span>
-                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
-                    </div>
-                </div>
-                <div class="design">
-                    <img src="images/Ronaldo.7-Messi.10.jpg" alt="">
-                    <div class="click-para">
-                        <button><a href="">click now</a></button>
-                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
-                    </div>
-                    <div class="time-chat">
-                        <span><i class="fa-solid fa-clock"></i> 10h</span>
-                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
-                    </div>
-                </div>
-                <div class="design">
-                    <img src="images/Pedri2.jpeg" alt="">
-                    <div class="click-para">
-                        <button><a href="">click now</a></button>
-                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
-                    </div>
-                    <div class="time-chat">
-                        <span><i class="fa-solid fa-clock"></i> 10h</span>
-                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
-                    </div>
-                </div>
-                <div class="design">
-                    <img src="images/neymar-.webp"">
-                    <div class="click-para">
-                        <button><a href="">click now</a></button>
-                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
-                    </div>
-                    <div class="time-chat">
-                        <span><i class="fa-solid fa-clock"></i> 10h</span>
-                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
-                    </div>
-                </div>
-                <div class="design">
-                    <img src="images/cr-7.webp" alt="">
-                    <div class="click-para">
-                        <button><a href="">click now</a></button>
-                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
-                    </div>
-                    <div class="time-chat">
-                        <span><i class="fa-solid fa-clock"></i> 10h</span>
-                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
-                    </div>
-                </div>
-                <div class="design">
-                    <img src="images/hazard_mbappe.jpg" alt="">
-                    <div class="click-para">
-                        <button><a href="">click now</a></button>
-                        <p>Cristiano Ronaldo 'concern' over rival Lionel Messi is influencing Man Utd career decision</p>
-                    </div>
-                    <div class="time-chat">
-                        <span><i class="fa-solid fa-clock"></i> 10h</span>
-                        <span><i class="fa-solid fa-comment-dots"></i>23</span>
-                    </div>
-                </div>  
-            </div>  
-        </div>             
-    </section>
-</main> 
+            <div class="design">
+              <img src="images/messi.10.jpg" alt="" />
+              <div class="click-para">
+                <button><a href="https://t.ly/f-5A">click now</a></button>
+                <p>
+                  Argentina's Lionel Messi fights for the ball with Dirk Kuyt of
+                  the Netherlands.
+                </p>
+              </div>
+              <div class="time-chat">
+                <span><i class="fa-solid fa-clock"></i> 10h</span>
+                <span><i class="fa-solid fa-comment-dots"></i>23</span>
+              </div>
+            </div>
+            <div class="design">
+              <img src="images/messi-bycle_kick.jpg" alt="" />
+              <div class="click-para">
+                <button><a href="https://t.ly/jtZM">click now</a></button>
+                <p>
+                  Lionel Messi gets standing ovation from rival fans after
+                  sensational overhead kick
+                </p>
+              </div>
+              <div class="time-chat">
+                <span><i class="fa-solid fa-clock"></i> 10h</span>
+                <span><i class="fa-solid fa-comment-dots"></i>23</span>
+              </div>
+            </div>
+            <div class="design">
+              <img src="images/cr-7_.webp" alt="" />
+              <div class="click-para">
+                <button><a href="https://t.ly/3tbS">click now</a></button>
+                <p>
+                  Cristiano Ronaldo comes out of silence: “The media tell a lot
+                  of lies”
+                </p>
+              </div>
+              <div class="time-chat">
+                <span><i class="fa-solid fa-clock"></i> 10h</span>
+                <span><i class="fa-solid fa-comment-dots"></i>23</span>
+              </div>
+            </div>
+            <div class="design">
+              <img src="images/Ronaldo.7-Messi.10.jpg" alt="" />
+              <div class="click-para">
+                <button><a href="https://t.ly/BxpO">click now</a></button>
+                <p>
+                  Lionel Messi and Cristiano Ronaldo at PSG might be fantasy
+                  football – but it could work
+                </p>
+              </div>
+              <div class="time-chat">
+                <span><i class="fa-solid fa-clock"></i> 10h</span>
+                <span><i class="fa-solid fa-comment-dots"></i>23</span>
+              </div>
+            </div>
+            <div class="design">
+              <img src="images/Pedri2.jpeg" alt="" />
+              <div class="click-para">
+                <button>
+                  <a href="https://tinyurl.com/2p84ut9h">click now</a>
+                </button>
+                <p>
+                  Pedri is La Roja’s new number ten.Koke tips Gavi and Pedri as
+                  future Spain stars
+                </p>
+              </div>
+              <div class="time-chat">
+                <span><i class="fa-solid fa-clock"></i> 10h</span>
+                <span><i class="fa-solid fa-comment-dots"></i>23</span>
+              </div>
+            </div>
+            <div class="design">
+              <img src="images/neymar-.webp"">
+              <div class="click-para">
+                <button>
+                  <a href="https://tinyurl.com/38xha4pj">click now</a>
+                </button>
+                <p>
+                  Neymar Leads Paris Saint-Germain to Big Opening Win in French
+                  League
+                </p>
+              </div>
+              <div class="time-chat">
+                <span><i class="fa-solid fa-clock"></i> 10h</span>
+                <span><i class="fa-solid fa-comment-dots"></i>23</span>
+              </div>
+            </div>
+            <div class="design">
+              <img src="images/cr-7.webp" alt="" />
+              <div class="click-para">
+                <button>
+                  <a href="https://tinyurl.com/2tt6w634">click now</a>
+                </button>
+                <p>
+                  Chelsea Transfer News: Ronaldo's Agent Holds Talks With Blues
+                  Co-owner
+                </p>
+              </div>
+              <div class="time-chat">
+                <span><i class="fa-solid fa-clock"></i> 10h</span>
+                <span><i class="fa-solid fa-comment-dots"></i>23</span>
+              </div>
+            </div>
+            <div class="design">
+              <img src="images/hazard_mbappe.jpg" alt="" />
+              <div class="click-para">
+                <button>
+                  <a href="https://tinyurl.com/mrypsj4u">click now</a>
+                </button>
+                <p>
+                  Watch: Kylian Mbappe's backpass vs Belgium that everyone is
+                  talking about
+                </p>
+              </div>
+              <div class="time-chat">
+                <span><i class="fa-solid fa-clock"></i> 10h</span>
+                <span><i class="fa-solid fa-comment-dots"></i>23</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <!-------------------
          Main section end Here  
          --------------------->
 
-         <!-- footer started here -->
-         <footer>
-            <div class="footer-head">
-                <h2>Goal</h2>
-                <hr>
-                <div class="footer-nav">
-                    <a href="">Contact Us</a>
-                    <a href="">Terms of Service</a>
-                    <a href="">Privacy Policy</a>
-                    <a href="">Privacy Settings </a>
-                    <a href="">Goal App</a>
-                    <a href="">Goal Live</a>
-                </div>
-                <div class="follow-us">
-                    <a class="fb" href="https://www.facebook.com/programmingHero" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                    <a class="lin" href="https://www.linkedin.com/company/programminghero/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                    <a class="git" href="https://github.com/ProgrammingHero1" target="_blank"><i class="fa-brands fa-github"></i></a>
-                </div>
-            </div>
-        </footer>
-</body>
+    <!-- footer started here -->
+    <footer>
+      <div class="footer-head">
+        <h2>Goal</h2>
+        <hr />
+        <div class="footer-nav">
+          <a href="">Contact Us</a>
+          <a href="">Terms of Service</a>
+          <a href="">Privacy Policy</a>
+          <a href="">Privacy Settings </a>
+          <a href="">Goal App</a>
+          <a href="">Goal Live</a>
+        </div>
+        <div class="follow-us">
+          <a
+            class="fb"
+            href="https://www.facebook.com/programmingHero"
+            target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a
+            class="lin"
+            href="https://www.linkedin.com/company/programminghero/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a
+            class="git"
+            href="https://github.com/ProgrammingHero1"
+            target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
